fix JAR direct execution & cleanup